# supermarket-pricing-kata

./: Makefile  README.md  pyproject.toml
.github/workflows/: python.yml
supermarket_pricing/: catalogue.py  exceptions.py  offers.py  product.py  product_catalogue.py  receipt_printer.py  shopping_cart.py
tests/: test_offers.py  test_shopping_cart.py
tests/end_to_end/: test_end_to_end.py
tests/unit/: test_offers.py  test_product.py  test_receipt_printer.py  test_shopping_cart.py
