[tool.poetry]
name = "supermarket_pricing_kata"
version = "0.0.1"
description = "Kata to calculate items in a supermarket shopping cart"
authors = ["Lara Mackey"]

[tool.poetry.dependencies]
python = "~3.10.13"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.venv
  )/
)
'''

[tool.isort]
profile = "black"
src_paths = ["person_hub_glue", "tests"]

[tool.mypy]
ignore_missing_imports = true
allow_untyped_calls = true
allow_untyped_defs = true
allow_incomplete_defs = true
implicit_optional = true
pretty = true